# second-brain

./: .gitignore  README.md
deploy/railway/: .env.example  Dockerfile  README.md  entrypoint.sh  railway.app.json  railway.couchdb.json  railway.qdrant.json  supervisord.conf
docs/: architecture.md
phase-0-vault/: README.md  init_vault.py
phase-0-vault/tests/: test_init_vault.py
phase-1-ingestion/: .env.example  README.md  pyproject.toml
phase-1-ingestion/docker/: Dockerfile  docker-compose.yml
phase-1-ingestion/src/ingestion/: __init__.py  chunker.py  cli.py  config.py  embedder.py  hashing.py  indexer.py  logging_setup.py  models.py  parser.py  sparse.py  store.py  watcher.py
phase-1-ingestion/tests/: test_chunker.py  test_hashing.py  test_parser.py
phase-1-ingestion/tests/fixtures/sample-vault/10_Projects/: ChapterNext.md
phase-1-ingestion/tests/fixtures/sample-vault/70_People/: Anna Schmidt.md
phase-2-mcp-server/: .env.example  README.md  pyproject.toml
phase-2-mcp-server/docker/: Caddyfile  Dockerfile  docker-compose.yml
phase-2-mcp-server/src/mcp_server/: __init__.py  atomic.py  auth.py  config.py  frontmatter_io.py  gcal_cli.py  gcal_client.py  gtasks_cli.py  gtasks_client.py  oauth.py  qdrant_client.py  rerank_cache.py  schemas.py  sections.py  server.py  sparse.py  vault.py  voyage.py
phase-2-mcp-server/src/mcp_server/fireflies/: api.py  matcher.py  renderer.py  resolver.py  types.py  webhook.py
phase-2-mcp-server/src/mcp_server/meetgeek/: __init__.py  api.py  matcher.py  renderer.py  types.py  webhook.py
phase-2-mcp-server/src/mcp_server/tools/: __init__.py  _common.py  gtasks.py  meetings.py  people_read.py  vault_read.py  vault_write.py
phase-2-mcp-server/tests/: conftest.py  test_atomic.py  test_fireflies.py  test_meetgeek.py  test_meetings_review.py  test_oauth.py  test_rerank_cache.py  test_schemas.py  test_sections.py  test_server_boot.py  test_vault.py  test_vault_write.py
phase-6-livesync-bridge/: README.md  pyproject.toml
phase-6-livesync-bridge/src/livesync_bridge/: __init__.py  bridge.py  cli.py  config.py  couchdb.py  encoding.py
phase-6-livesync-bridge/tests/: test_apply_doc.py  test_echo_suppression.py  test_encoding.py
